# rs-http-client

./: Cargo.toml  README.md
examples/: main.rs
src/: client.rs  exception.rs  hooks.rs  lib.rs  log.rs  response.rs
tests/: client_tests.rs
