[package]
name = "rs-http-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde_json = "1.0.108"
base64 = "0.21.5"
serde_urlencoded = "0.7.1"
log = "0.4.20" 
env_logger = "0.10.1"
chrono = "0.4.31"